kubernetes/1_synapse/3_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
  namespace: synapse
  labels:
    app: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synapse
  template:
    metadata:
      labels:
        app: synapse
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: synapse-config
        - name: media-volume
          persistentVolumeClaim:
            claimName: synapse-media
      containers:
      - name: synapse
        image: matrixdotorg/synapse:v1.69.0
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
          - name: config-volume
            mountPath: /data/homeserver.yaml
            subPath: homeserver.yaml
          - name: config-volume
            mountPath: /data/log.config
            subPath: log.config
          - name: config-volume
            mountPath: /data/signing.key
            subPath: signing.key
          - name: media-volume
            mountPath: /data/media_store
        readinessProbe:
          httpGet:
            path: /health
            port: 8008
