kubernetes/1_synapse/4_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: synapse
spec:
  selector:
    app: synapse
  ports:
    - name: http
      port: 8008
      targetPort: 8008
